Dynamic-access coverage for org.apache.tools.ant.taskdefs.MacroDef (177/204)